tests/fail/literal_overflow_wide_target/test.yp
fn main() {
    byte b = 300;
}
